Search placeholder - fix label alignment

--- a/src/components/label/_label.scss
+++ b/src/components/label/_label.scss
@@ -21,7 +21,7 @@
     font-weight: $font-weight-regular;
     left: 8px;
     position: absolute;
-    top: -3px;
+    top: 6px;
   }
 
   &--white {
